<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/income_registry_title"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/txt_placa"
            style="@style/EditTextStyle"
            android:hint="@string/vehicle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_text"
            android:layout_marginTop="20dp"
            />
        <RadioGroup
            android:id="@+id/place_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/engineering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engineering"
                />
            <RadioButton
                android:id="@+id/administration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/administration"
                />
            <RadioButton
                android:id="@+id/sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport"
                />
            <RadioButton
                android:id="@+id/motorcycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motorcycle"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_text"
            android:layout_marginTop="20dp"
            />
        <RadioGroup
            android:id="@+id/type_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car"/>
            <RadioButton
                android:id="@+id/motorcycle_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_motorcycle"/>
        </RadioGroup>
        <Button
            android:id="@+id/btn_registry_income"
            android:layout_marginTop="30dp"
            style="@style/buttonTheme"
            android:text="@string/income"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>
</ScrollView>
